<resources>
    <string name="app_name">Waste Watch</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="logout">Logout</string>
    <string name="splash_text_one">Better Waste Management.</string>
    <string name="splash_text_two">Better Living Space.</string>
    <string name="welcome">Welcome!</string>
    <string name="connect">Connect</string>
    <string name="username_or_email">Username or email</string>
    <string name="your_account">your account</string>
    <string name="don_t_have_an_account_yet">Don\'t have an Account yet?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_your">Choose your</string>
    <string name="select">Select Item</string>
    <string name="barangay">Barangay</string>
    <string name="blank">ㅤ</string>

    <string name="my_map_api_key">AIzaSyBKgzeWSYhh_huh3EInl5qgb3PbyJRr4NI</string>

    <string-array name="barangays">
        <item>Select a Barangay...</item>
    </string-array>

    <string-array name="district">
        <item>Select a District...</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest">Latest</string>
    <string name="schedules">Schedules</string>
    <string name="for_collection">FOR COLLECTION</string>
    <string name="report">Report</string>
    <string name="check_nschedule_nhere">Check \nSchedule \nhere</string>
    <string name="check_live_ncollection_nhere">Check Live \nCollection \nHere</string>
    <string name="admin">Admin</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="user">User</string>
    <string name="manage_nprofile">Manage \nProfile</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="time">Time</string>
    <string name="map_place_holder">Map Place holder</string>
    <string name="add_garbage_bin">Add Garbage Bin</string>
    <string name="bin_status">Bin Status</string>
    <string name="generate_report">Generate Report</string>
    <string name="select_district">Select District</string>
    <string name="show_password">Show Password</string>
    <string name="form">Form</string>
    <string name="garbage_bin_status">Garbage Bin Status</string>
    <string name="su">Su</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="weekdays_month_day">Weekdays, Month Day</string>
    <string name="back">Back</string>
    <string name="we">We</string>
    <string name="starts_at_mm_ss_am_pm">Starts at MM:SS AM/PM</string>
    <string name="save">Save</string>
    <string name="barangay_name">Barangay Name</string>
    <string name="request_message">Request Message</string>
    <string name="send_request">Send Request</string>
    <string name="request_collection">Request Collection</string>
    <string name="collection_requests">Collection Requests</string>
    <string name="requestee">Requestee:</string>
    <string name="address">Address:</string>
    <string name="verify_residents">Verify Residents</string>
    <string name="bin_name">Bin Name:</string>
    <string name="first_name_verify">First Name:</string>
    <string name="last_name_verify">Last Name:</string>
    <string name="collect">COLLECT</string>
    <string name="near">Near</string>
</resources>