<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <!-- Layout for Views or Main body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="120dp"
        android:paddingBottom="60dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp">


    <TextView
        android:text="@string/welcome"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/connect"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/your_account"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <TextView
        android:text="@string/username_or_email"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:background="@drawable/input_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"/>


    <TextView
        android:text="@string/password"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_text"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:textColor="@color/link_blue_register"
            android:textStyle="bold"
            android:textSize="12sp"
            android:id="@+id/RegisterNow"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:text="Login with"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <!-- ImageView with Shape and Logo-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/login_bottom">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:paddingRight="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

    </RelativeLayout>

</LinearLayout>
