<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requestCollection.userRequestCollectionFragment"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_collection"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_username"
            android:background="@drawable/input_text"
            android:hint="@string/blank"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/label_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barangay_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_barname"
            android:background="@drawable/input_text"
            android:hint="@string/blank"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/label_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_message"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_request_message"
            android:background="@drawable/input_text"
            android:hint="@string/blank"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:padding="10dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/user_checklocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/send_request"
            android:textColor="@color/white"/>
    </LinearLayout>

</FrameLayout>
