<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminReportFragment"
    android:id="@+id/fragment_admin_report">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/top_square"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barangay"
            android:id="@+id/barangay"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:id="@+id/username"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/verify_residents"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/btn_report"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/generate_report"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/logout"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>