<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <!-- Layout for Views or Main body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp">

        <TextView
            android:text="@string/welcome"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"/>
        <TextView
            android:text="Sign Up"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Form"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/first_name"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fName"
            android:hint="@string/blank"
            android:background="@drawable/input_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:inputType="text|textNoSuggestions"/>

        <TextView
            android:text="@string/last_name"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lName"
            android:hint="@string/blank"
            android:background="@drawable/input_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:inputType="text|textNoSuggestions"/>

        <TextView
            android:text="@string/username"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/blank"
            android:background="@drawable/input_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:inputType="text|textNoSuggestions"/>

        <TextView
            android:text="@string/email"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/blank"
            android:background="@drawable/input_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:inputType="text|textNoSuggestions"/>

        <TextView
            android:text="@string/password"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/ic_toggle_password"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/blank"
                android:background="@drawable/input_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_register"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"/>

        </LinearLayout>

    <!-- ImageView with Shape and Logo-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bottom_square">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/wastewatch_logo_bottom"
            android:paddingRight="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>


</LinearLayout>