<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Barangay">


    <!--Layout for Views or Main body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="80dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp">


        <TextView
            android:text="@string/welcome"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/choose_your"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/barangay"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Select Barangay"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/brgySpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/spinner"
            android:entries="@array/barangays"
            android:scrollbarStyle="insideOverlay"/>

        <Button
            android:id="@+id/btn_bgry_signup"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="25dp"/>



    </LinearLayout>

    <!-- ImageView with Shape and Logo-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:background="@drawable/bottom_square">

        <!-- To go back to login for now-->
        <TextView
            android:id="@+id/loginNow"
            android:text="@string/click_to_login"
            android:textColor="@color/link_blue_register"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:paddingRight="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/splash" />

    </RelativeLayout>




</LinearLayout>
