<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleFragment"
    android:id="@+id/fragment_schedule"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:text="@string/latest"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/schedules"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/for_collection"
        android:textSize="12sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/text_dark_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="20dp"
               android:background="@drawable/calendar_heading">

               <TextView
                   android:id="@+id/monthYearTV"
                   android:layout_width="120dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="2"
                   android:text="August 2023"
                   android:textSize="16sp"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:paddingLeft="20dp"/>

               <Button
                   android:id="@+id/btnPrevious"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:background="@drawable/ic_up"
                   android:onClick="previousMonth"
                   android:text="@string/blank"
                   tools:ignore="TouchTargetSizeCheck" />

               <Button
                   android:id="@+id/btnNext"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="20dp"
                   android:layout_marginLeft="5dp"
                   android:layout_weight="1"
                   android:background="@drawable/ic_down"
                   android:onClick="nextMonth"
                   android:text="@string/blank"
                   tools:ignore="TouchTargetSizeCheck" />

           </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingTop="5dp"
            android:orientation="horizontal"
            android:background="@color/weeks_gray">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Su"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tu"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="We"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Th"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Fr"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sa"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/calendar_bar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/caledarRecycleView"
            android:layout_marginBottom="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/calendar_footer"/>

    </LinearLayout>


</FrameLayout>